<resources>
    <string name="app_name">Calculator</string>
    <string name="button_4">4</string>
    <string name="button_1">1</string>
    <string name="button_multiply">*</string>
    <string name="button_7">7</string>
    <string name="button_9">9</string>
    <string name="button_divide">/</string>
    <string name="button_8">8</string>
    <string name="button_clear">C</string>
    <string name="button_0">0</string>
    <string name="button_decimal">.</string>
    <string name="button_minus">-</string>
    <string name="button_6">6</string>
    <string name="button_plus">+</string>
    <string name="button_5">5</string>
    <string name="button_2">2</string>
    <string name="button_equals">=</string>
    <string name="button_3">3</string>
    <string name="button_backspace">←</string>
    <string name="button_extend">Extend</string>
    <string name="button_simple">Simple</string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_tan">tan</string>
    <string name="button_log">log</string>
    <string name="button_ln">ln</string>
    <string name="button_xn">xⁿ</string>
    <string name="button_root">√</string>
    <string name="button_factorial">!</string>
    <string name="button_modulo_division">%</string>
    <string name="button_pi">π</string>
    <string name="division_by_zero">You silly sausage</string>
    <string name="dark_light_mode">Dark Mode</string>
    <string name="simple_extended_mode">Extended Mode</string>
    <string name="theme_preview">Theme Preview</string>
    <string name="settings_apply">Apply</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_button">Settings</string>
    <string name="show_bottom_settings">Show Bottom Settings</string>
</resources>