<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator_Activity_Simple">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvFullStatement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tvFullStatement_height"
        android:layout_marginStart="@dimen/portrait_layout_margin_start"
        android:layout_marginTop="@dimen/layout_portrait_top_margin"
        android:layout_marginEnd="@dimen/portrait_layout_margin_end"
        android:textSize="@dimen/tvFullStatement_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tvResult_height"
        android:layout_marginStart="@dimen/portrait_layout_margin_start"
        android:layout_marginEnd="@dimen/portrait_layout_margin_end"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/tvResult_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFullStatement"
        tools:ignore="TextViewEdits" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_layout_margin_start"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_divide"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_multiply"
        app:layout_constraintStart_toEndOf="@+id/button_divide"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_backspace"
        android:layout_width="@dimen/layout_button_small_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:layout_marginEnd="@dimen/portrait_layout_margin_end"
        android:text="@string/button_backspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_multiply"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_layout_margin_start"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_8"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="@dimen/layout_button_small_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:layout_marginEnd="@dimen/portrait_layout_margin_end"
        android:text="@string/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_backspace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_layout_margin_start"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_5"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="@dimen/layout_button_small_width"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:layout_marginEnd="@dimen/portrait_layout_margin_end"
        android:text="@string/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_layout_margin_start"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_2"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equals"
        android:layout_width="@dimen/layout_button_small_width"
        android:layout_height="96dp"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:layout_marginEnd="@dimen/portrait_layout_margin_end"
        android:text="@string/button_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_decimal"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="@dimen/button_0_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_layout_margin_start"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_button_horizontal_space"
        android:layout_marginTop="@dimen/layout_button_margin_top"
        android:text="@string/button_decimal"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_extend"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_switch_activity_height"
        android:layout_marginEnd="@dimen/extra_buttons_margin_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/button_extend"
        android:textAllCaps="false"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/darkLightModeSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/switch_dark_light_mode_margin_start"
        android:text="@string/dark_light_mode"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/settingsImageViewButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="@dimen/extra_buttons_margin_end"
        android:background="@color/transparent"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/settings_button" />

</androidx.constraintlayout.widget.ConstraintLayout>